[tool.poetry]
name = "crp-classifier"
version = "0.1.0"
description = "Explore using chinese restaurant processes"
authors = ["None"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.0.0"
argparse = "^1.4.0"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
